# FastAPI-Traefik-In-Server

./: .env  docker-compose.yml  secrets
backend/: Dockerfile  logs.json  pyproject.toml
backend/app/: main.py
traefik/: Dockerfile  dynamic.yml  traefik.yml
traefik/letsencrypt/: acme.json
volumes/minio_storage/.minio.sys/: format.json
volumes/minio_storage/.minio.sys/tmp/.trash/1c626f33-997b-4853-8c3d-bc4ce2ac962c/: xl.meta.bkp
volumes/minio_storage/.minio.sys/tmp/.trash/56081b7c-150c-4be0-a47a-2cdf2b9829d6/: xl.meta.bkp
