[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipython>=8.29.0",
    "isort>=5.13.2",
]

[tool.pyright]
include = ["."]
venvPath = "./"
venv = ".venv"
extraPaths = [".venv", ".env", "venv", "env"]
typeCheckingMode = "basic"
pythonVersion = "3.12"

[tool.mypy]
mypy_path = [".venv", ".env", "venv", "env"]
files = ["./"]
strict = true

[tool.black]
line-length = 200
target-version = ["py312"]
